clang/test/BSC/Negative/Generic/InvalidTemplateParameters/do_not_crash6.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

a b c<[d>();
// expected-error@-1 {{expected expression}}
// expected-error@-2 {{use of undeclared identifier 'd'}}
// expected-error@-3 {{expected ',' or '>' in template-parameter-list}}
// expected-error@-4 {{expected '>'}}
// expected-error@-5 {{expected template parameter}}
